--- a/src/FuelTracker/Views/Auth/ResetPassword.cshtml
+++ b/src/FuelTracker/Views/Auth/ResetPassword.cshtml
@@ -1,7 +1,10 @@
-﻿
-@model FuelTracker.ApiModels.UserApiModels.PostResetPassword
+﻿@model FuelTracker.Models.Auth.ResetPassword
 
+@{
 
+    var x = Model;
+
+} 
 <!DOCTYPE html>
 <html>
 <head>
